# proyecto2_compi

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  compiler  main.cpp  output.asm  output.debug.json  programa  run_tests.ps1  run_tests.sh  test_simple.c  test_single.ps1
aws/: deploy.ps1  deploy.sh  package.ps1  package.sh  serverless.yml
aws/lambda/: .gitignore  __init__.py  lambda_function.py  setup_test.ps1  setup_test.sh  test_event.json  test_event_simple.json  test_lambda.py
aws/lambda/core/: __init__.py  compiler.py  emulator.py
aws/lambda/handlers/: __init__.py  lambda_function.py
aws/lambda/services/: __init__.py  compilation_service.py
aws/lambda/utils/: __init__.py  config.py  request_parser.py  response.py
parser/: ast.cpp  ast.h  parser.cpp  parser.h
scanner/: scanner.cpp  scanner.h  token.cpp  token.h
tests/base/: test1.c  test2.c  test3.c  test4.c  test5.c
tests/extensions/: ext1.c  ext2.c  ext3.c  ext4.c  ext5.c
tests/functions/: func1.c  func2.c  func3.c
tests/optimization/: opt1.c  opt2.c  opt3.c  opt4.c  opt5.c
visitors/: codegen.cpp  codegen.h  debuggen.cpp  debuggen.h  optimizer.cpp  optimizer.h
